--- a/src/App.css
+++ b/src/App.css
@@ -151,10 +151,10 @@ body {
   align-items: center;
   height: 70px;
 }
-.aside-container li {
+/* .aside-container li {
   background-color: gray;
   color: #fff;
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
-}
+} */
