create modalBox for update product

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ body {
 .add-product-form h3 {
   text-align: center;
 }
-.add-product-form input,
+.add-product-form input, input, 
 select {
   border-radius: 10px;
   display: block;
